--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,10 +1,8 @@
-<div class="contacts">
-
-  <i class="bi bi-instagram"></i>
-  <i class="bi bi-facebook"></i>
-  <i class="bi bi-linkedin"></i>
-  <i class="bi bi-wordpress"></i>
-  <i class="bi bi-youtube"></i>
-
+<div class="contacts" id="contacts">
+  <a href="https://www.instagram.com/wagnercaetano.dev/"><i class="bi bi-instagram"></i> </a>
+  <a href="https://www.facebook.com/profile.php?id=100089772883849"><i class="bi bi-facebook"></i></a>
+  <a href="https://www.linkedin.com/in/wagner-caetano/"><i class="bi bi-linkedin"></i></a>
+  <a href="https://wagnercaetano.com/agency/"><i class="bi bi-wordpress"></i></a>
+  <a href="https://www.youtube.com/channel/UCetuCY0EfHb9djFIVsD9e8w"><i class="bi bi-youtube"></i></a>
 </div>
 <p>Copyright © 2023 Wagner Caetano. All rights reserved.</p>
