--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -3,8 +3,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    i {
+    i,a {
         font-size: 2rem;
+        color: #0a58ca;
     }
     padding: 5rem 0rem 1rem 0rem;
 }
