fixing build and images

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
 
 <div class="intro" id="intro">
   <div class="vertical">
-    <img src="../../../assets/img/profile.jpg" alt="" />
+    <img src="https://wagnercaetano.com/agency/wp-content/uploads/2023/01/unnamed.jpg" alt="" />
     <p>_____ Desenvolvedor Fullstack</p>
   </div>
   <div class="vertical">
@@ -98,35 +98,35 @@
 
   <div>
     <div class="box">
-      <img src="../../../assets/icons/angular.svg" alt="" />
+      <img src="http://localhost/meu-site/wp-content/uploads/data/icons/angular.png" alt="" />
       <p>Angular</p>
     </div>
     <div class="box">
-      <img src="../../../assets/icons/java.svg" alt="" />
+      <img src="http://localhost/meu-site/wp-content/uploads/data/icons/java.png" alt="" />
       <p>Java<br /></p>
     </div>
     <div class="box">
-      <img src="../../../assets/icons/wordpress.svg" alt="" />
+      <img src="http://localhost/meu-site/wp-content/uploads/data/icons/wordpress.png" alt="" />
       <p>Wordpress</p>
     </div>
     <div class="box">
-      <img src="../../../assets/icons/spring.svg" alt="" />
+      <img src="http://localhost/meu-site/wp-content/uploads/data/icons/spring.png" alt="" />
       <p>Spring Boot</p>
     </div>
     <div class="box">
-      <img src="../../../assets/icons/typescript.svg" alt="" />
+      <img src="http://localhost/meu-site/wp-content/uploads/data/icons/typescript.png" alt="" />
       <p>Typescript</p>
     </div>
     <div class="box">
-      <img src="../../../assets/icons/git.svg" alt="" />
+      <img src="http://localhost/meu-site/wp-content/uploads/data/icons/git.png" alt="" />
       <p>Git<br /></p>
     </div>
     <div class="box">
-      <img src="../../../assets/icons/vscode.svg" alt="" />
+      <img src="http://localhost/meu-site/wp-content/uploads/data/icons/vscode.png" alt="" />
       <p>VSCode</p>
     </div>
     <div class="box">
-      <img src="../../../assets/icons/scss.svg" alt="" />
+      <img src="http://localhost/meu-site/wp-content/uploads/data/icons/scss.png" alt="" />
       <p>SCSS</p>
     </div>
   </div>
