--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,26 +3,23 @@
 @import "./../node_modules/bootstrap/scss/bootstrap.scss";
 @import "~bootstrap-icons/font/bootstrap-icons.css";
 
-div {
+app-root {
+  div {
     display: flex;
     flex-direction: row;
-}
+  }
 
-p {
+  p {
     margin: 0;
     padding: 0;
-}
+  }
 
-.vertical{
+  .vertical {
     display: flex;
     flex-direction: column;
-}
+  }
 
-body {
-    background: linear-gradient(70deg,rgba(240, 253, 253, 1) 10%,rgba(240, 235, 235, 1) 60%);
-    font-family: 'Roboto', 'Poppins';
-}
-
-i {
+  i {
     padding: 1rem;
+  }
 }
