--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -2,7 +2,8 @@ nav {
   display: flex;
   flex-wrap: row;
   padding: 1rem;
-  color: #121212;
+  color: #121212 !important;
+  box-shadow: none !important;
 
   .title {
     font-size: 1.5rem;
